ExternalDNS/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ""
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: proxy-public
          servicePort: 80
